@@ -1,6 +1,6 @@
 /* -------------------------------------------------------------- 
   
-   Reset.css
+   reset.css
    * Website:   http://code.google.com/p/blueprintcss/
    
    Original by Eric Meyer:
