@@ -10,6 +10,10 @@
   <!-- Framework CSS -->
   <link rel="stylesheet" href="../screen.css" type="text/css" media="screen, projection" />
   <link rel="stylesheet" href="../print.css" type="text/css" media="print" />	
+  <!--[if lt IE 7]>
+    <link rel="stylesheet" href="../ie.css" type="text/css" media="screen, projection">
+  <![endif]-->
+  
 </head>
 
 <body>
