@@ -5,6 +5,7 @@ Blueprint CSS Framework Change Log
 
 Version 0.6 - TBD
 --
+  * Added an IE stylesheet, updated the test files and the readme accordingly [OFB]
   * Re-added improved support for em units [OFB]
   * Lots of minor changes to typography.css and reset.css, provided by Christian Montoya [OFB]
   * Extracted the fancy typography section in typography.css to a new plugin [OFB]
